@@ -1,5 +1,9 @@
 --- v3.7 (2019-xx-xx) ---
 * Package libxkbcommon: add ability to build static library.
+* Remove configs for some unsupported systems:
+  - МСВС-3.0-80001-12_shared.sh
+  - МСВС-3.0-80001-16_shared.sh
+  - МСВС-5.0_shared.sh
 
 --- v3.6 (2019-05-23) ---
 * Add new package: libuuid.
